2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Brane Ždralo:
	patch #7769: Write flash fails for AVR910 programmers
	* avr910.c (avr910_paged_write): Fix flash addresses in
	'A' command.

2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Fred (magister):
	bug #38951: AVR109 use byte offset instead of word offset
	patch #8045: AVR109 butterfly failing
	* butterfly.c (butterfly_paged_load, butterfly_paged_write):
	fix calculation of 'A' address when operating on flash memory.
	It must be given in terms of 16-bit words rather than bytes.

2013-09-03  Rene Liebscher <R.Liebscher@gmx.de>

	* avrftdi.c, avrftdi_private.h: added tx buffer size, and use
	smaller block sizes as larger sometimes hang

2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.h: Remove the erase cycle counter (options -y / -Y).
	* avr.c: (Dito.)
	* main.c: (Dito.)
	* avrdude.1: Undocument -y / -Y.
	* doc/avrdude.texi: (Dito.)

2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #39691 Buffer overrun when reading EEPROM byte with JTAGICE3
	* jtag3.c (jtag3_initialize): initialize the eeprom_pagesize
	private attribute so the page cache will actually be usable

2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #38580 Current svn head, xmega and fuses, all fuses tied to fuse0
	* jtag3.c (jtag3_read_byte, jtag3_write_byte): Correctly apply the
	relevant part of mem->offset as the address to operate on.

2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c: Fix "unused variable" warnings.
	* avr.c: (Dito.)
	* stk500v2.c: (Dito.)
	* stk500.c: (Dito.)
	* jtagmkII.c: (Dito.)
	* term.c: (Dito.)
	* ser_posix.c: (Dito.)

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Travis Griggs:
	bug #38307: Can't write usersig of an xmega256a3
	* stk500v2.c (stk600_xprog_page_erase): allow erasing the usersig space.

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Robert Niemi: